--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="a website i made to explain me :) " 
    <link rel="stylesheet" href="style.css">
-    <title>skyler!</title>
+    <title>sky!</title>
 
 </html>
    <head>
@@ -15,7 +15,7 @@
 <marquee behavour="" direction="right"> Hope u learn more about me</marquee> 
    <body>
 <div class ="introText">
-       <p> Hello! My name is skyler and i like to code. I also like to play airsoft</p>
+       <p> Hello! I am an 8th grader that likes to code. I also like to play airsoft and paintball</p>
        <p> I made this website to improve my HTML and CSS (and some javascript)</p>
        <p> In the mean time, here are some things I like:</p>
        </div>
