--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
    <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="a website i made to explain me :) " 
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" src="style.css">
     <title>sky!</title>
 
 </html>
